@@ -1,3 +1,8 @@
+2009-05-18  Dodji Seketeli  <dodji@redhat.com>
+
+	PR debug/40109
+	* g++.dg/debug/dwarf2/nested-1.C: New test.
+
 2009-05-18  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR testsuite/39907
